# Penelope

./: .env.example  .gitignore  ACKNOWLEDGMENTS.md  CLAUDE.md  CONTRIBUTING.md  DISCOVERY.md  DOCS.md  README.md  ROADMAP.md  UPSTREAM.md  app.py  docker-compose.yml  launch-windows.ps1  requirements.txt  setup.py
.github/: pull_request_template.md
backend/: README.md  adventure.py  config.py  db.py  main.py  memory.py  ollama_client.py  pyproject.toml  schemas.py  test_consolidation.py
cli/: __main__.py  approval.py  client.py  commands_registry.py  i18n.py  render.py  session_store.py  stream.py  test_app.py  test_stream.py  theme.py  tui.py
cli/commands/: chat.py  config.py  language.py  memory.py  model.py  notes.py  session.py  status.py  tasks.py  web.py
docs/: index.html  project_penelope.md
frontend/: FONTS.md  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
integrations/claude/: README.md
integrations/codex/: README.md
mcp_servers/: memory_server.py
routes/: chat_helpers.py  chat_routes.py
scripts/: install-cli.ps1  penelope-cli.ps1  uninstall-cli.ps1
services/memory/: __init__.py  mem0.py  mem0_schemas.py
src/: agent_approval.py  agent_loop.py  app_initializer.py  chat_processor.py
static/: app.js  index.html  login.html  manifest.json  style.css
static/js/: admin.js  chat.js  chatRenderer.js  cookbook.js  document.js  emailInbox.js  group.js  models.js  notes.js  presets.js  sessions.js  settings.js  slashCommands.js  storage.js  theme.js
tests/: test_agent_approval.py  test_mem0.py
(+39 files in other folders)
