[project]
name = "backend"
version = "1.5.0"
description = "Penelope backend — local-first AI assistant (chat, memory, vision, pipeline)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pillow>=11.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlite-vec>=0.1.9",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
